# action-ai

./: README.md
.agent/task/2025-09-13-session-topics-webapp-frontend/: done.md  log.md  todo.md
action-frontend/: index.html  jest.config.cjs  package-lock.json  package.json  playwright.config.ts
action-frontend/src/ui/: App.test.tsx  App.tsx
action-frontend/tests/e2e/: basic.spec.ts
action-terminal/: .env  .gitignore  Dockerfile  README.md  pyproject.toml
action-terminal/action/app/: action_composer.py  action_server.py  action_server_runner.py  action_server_types.py  action_service.py  action_service_types.py  logging_config.py  pty_reader.py  terminal.py  terminal_types.py  test_utils.py  topic_manager.py
action-terminal/action/lib/: terminal_1.py
action-terminal/action/tests/: conftest.py
action-terminal/action/tests/integration/: README.md  test_action_server.py  test_terminal.py  test_terminal_2.py  test_terminal_plays_zork.py
action-terminal/action/tests/integration/snapshots/: zork_after_leaflet.txt  zork_after_restore.txt  zork_after_save.txt  zork_inventory_after_leaflet.txt  zork_start.txt
action-terminal/action/tests/unit/: test_terminal.py
action-webapp/: alembic.ini  docker-compose.yml  pyproject.toml
action-webapp/alembic/: env.py
action-webapp/alembic/versions/: 0001_initial.py  0002_session_topics.py  0003_messages.py
action-webapp/app/: main.py
action-webapp/app/api/: messages.py  sessions.py  updates.py
action-webapp/app/core/: config.py  subscriber.py
action-webapp/app/db/: base.py  models.py  session.py
action-webapp/tests/: conftest.py
action-webapp/tests/integration/: test_app_basic.py  test_messages.py  test_sessions_crud.py  test_updates.py
