[tool.poetry]
name = "action-webapp"
version = "0.1.0"
description = "Durable webapp for action terminal messages"
authors = ["John Knapp <john.knappster@gmail.com>"]
packages = [{include = "app"}]
readme = "README.md"
# Disable package mode so tests run without installing root as a package
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.43"
alembic = "^1.16.5"
pydantic = "^2.11.8"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
httpx = "^0.28.1"
python-dotenv = "^1.1.1"
typing-extensions = "^4.15.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
anyio = "^4.10.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.pytest.ini_options]
addopts = '-q'
asyncio_mode = 'auto'
pythonpath = ["."]
